--- a/cursobgdqgis.html
+++ b/cursobgdqgis.html
@@ -30,7 +30,7 @@
     <!--###########################-->
     <!--Fuentes, estylos, javascript y favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
-    <link rel="stylesheet" media="all" href="css/nstylos.css"/>
+    <link rel="stylesheet" media="all" href="css/stylos.css"/>
     <link rel="stylesheet" href="css/iconos/iconos.css"/>
     <link rel="canonical" href="https://schooltec.net"/>
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet"/>
@@ -52,20 +52,23 @@
             <nav>
                 <ul class='no-list collection main-nav'>
                     <div class='collection-item no-padding-large user-nav' style='font-size:1.1em;'>
-                        <a class="grey-hover" href="nindex.html">
+                        <a class="grey-hover" href="index.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Inicio</li>
                         </a>
                         <a class="grey-hover" href="ncursos.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Cursos</li>
                         </a>
-                        <a href="ntalleres.html">
+                        <a href="talleres.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Talleres</li>
                         </a>
-                        <a href="nblog.html">
+                        <a href="blog.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Blog</li>
                         </a>
-                        <a href="cursobgdqgis.html">
-                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Dia</li>
+                        <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Donate</li>
+                        </a>
+                        <a href="https://schooltec.net/cursobgdqgis">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Día</li>
                         </a>
                     </div>
                 </ul>
@@ -84,42 +87,42 @@
                         <div class='col-xs-2 hidden-bg'></div>
                         <div class='no-padding text-left col-xs-5 col-sm-2 col-md-4'>
                             <div class='box'>
-                                <a href="nindex.html"><img height="45" src="img/favicon.png" alt="Logotipo" /></a>
+                                <a href="index.html"><img height="45" src="img/favicon.png" alt="Logotipo" /></a>
                             </div>
                         </div>
                         <div class=' no-padding text-right col-xs-5 col-sm-9 col-md-8'>
                             <div class='box'>
                                 <ul class='horizontal_nav new-black-text text-lighten-3 relative text-right' style='min-height:1em;'>
-                                    <a class="hidden-xs" href="nindex.html">
-                                        <li class='inline-block'>
-                                            <i class='icon-home'></i>
-                                            <p class='no-margin be-small'>Inicio</p>
-                                        </li>
-                                    </a>
-                                    <a class="hidden-xs" href="ncursos.html">
+                                    <a class="hidden-xs" href="cursos.html">
                                         <li class='inline-block'>
                                             <i class='icon-play'></i>
                                             <p class='no-margin be-small'>Cursos</p>
                                         </li>
                                     </a>
-                                    <a class="hidden-xs" href="ntalleres.html">
+                                    <a class="hidden-xs" href="talleres.html">
                                         <li class='inline-block'>
                                             <i class='icon-file-text'></i>
                                             <p class='no-margin be-small'>Talleres</p>
                                         </li>
                                     </a>
-                                    <a class="hidden-xs" href="nblog.html">
+                                    <a class="hidden-xs" href="blog.html">
                                         <li class='inline-block'>
                                             <i class="icon-book"></i>
                                             <p class='no-margin be-small'>Blog</p>
                                         </li>
                                     </a>  
-                                    <a class="open-searcher hidden-xs" href="cursobgdqgis.html">
+                                    <a class="hidden-xs" target="_blank"href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
                                         <li class='inline-block'>
-                                            <i class='icon-circle-left'></i>
-                                            <p class='no-margin be-small'>Dia</p>
+                                            <i class="icon-gift"></i>
+                                            <p class='no-margin be-small'>Donate</p>
                                         </li>
-                                    </a>   
+                                    </a>
+                                    <a class="hidden-xs" href="https://schooltec.net/cursobgdqgis">
+                                        <li class='inline-block'>
+                                            <i class="icon-contrast"></i>
+                                            <p class='no-margin be-small'>Día</p>
+                                        </li>
+                                    </a> 
                                 </ul>
                             </div>
                         </div>
@@ -135,8 +138,8 @@
                     <div class='box'>
                         <div class='row middle-xs center-xs text-left top-space'>
                             
-                            <div class=' col-xs-12 col-sm-6 col-md-8 col-lg-7'>   
-                                <video controls="" autoplay="" name="media"><source src="vdo/adiccionalsmartphone.mp4" type="video/mp4"></video>             
+                            <div class=' col-xs-12 col-sm-6 col-md-8 col-lg-7'> 
+                                <div style="position:relative; overflow:hidden; padding-bottom:56.25%"> <iframe src="https://cdn.jwplayer.com/players/wa978nGm-3rOwtw94.html" width="100%" height="100%" frameborder="0" scrolling="auto" title="Curso QGIS" style="position:absolute;" allowfullscreen></iframe> </div> 
                             </div>         
 
                             <article class='card col-course course no-padding premium relative text-left' data-category-ids=''> 
@@ -152,7 +155,7 @@
                                         <center><a href="cursobgdqgissesion01.html">Accede gratuitamente a este curso</a></center>
                                     </h2>
                                     <center>
-                                        <a class="botonschooltec" href="ncursobgdqgissesion01.html">
+                                        <a class="botonschooltec" href="cursobgdqgissesion01.html">
                                             <color style="color: #ffffff; font-weight: bold;">Iniciar gratis</color>
                                         </a>
                                     </center>
@@ -359,9 +362,9 @@
                                     <div class='box'>
                                         <p class='uppercase green-flat-text'>Contenido</p>
                                         <ul>
-                                            <li><a href="ncursos.html">Cursos</a></li>
-                                            <li><a href="ntalleres.html">Talleres</a></li>
-                                            <li><a href="nblog.html">blog</a></li>
+                                            <li><a href="cursos.html">Cursos</a></li>
+                                            <li><a href="talleres.html">Talleres</a></li>
+                                            <li><a href="blog.html">blog</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -369,9 +372,9 @@
                                     <div class='box'>
                                         <p class='uppercase green-flat-text'>Cursos</p>
                                         <ul>
-                                            <li><a href="nprogramacion.html">Programación</a></li>
-                                            <li><a href="nofimatica.html">Ofimática</a></li>
-                                            <li><a href="nsoftware.html">Software</a></li>
+                                            <li><a href="programacion.html">Programación</a></li>
+                                            <li><a href="ofimatica.html">Ofimática</a></li>
+                                            <li><a href="software.html">Software</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -379,9 +382,9 @@
                                     <div class='box'>
                                         <p class='uppercase green-flat-text'>Nosotros</p>
                                         <ul>
-                                            <li><a href="nequipo.html">Equipo</a></li>
+                                            <li><a href="equipo.html">Equipo</a></li>
                                             <li><a target="_blank" href="https://m.me/schooltec">Contacto</a></li>
-                                            <li><a href="ninfo.html">Información</a></li>
+                                            <li><a href="info.html">Información</a></li>
                                         </ul>
                                     </div>
                                 </div>
