--- a/cursobgdqgissesion01.html
+++ b/cursobgdqgissesion01.html
@@ -30,7 +30,7 @@
     <!--###########################-->
     <!--Fuentes, estylos, javascript y favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
-    <link rel="stylesheet" media="all" href="css/nstylos.css"/>
+    <link rel="stylesheet" media="all" href="css/stylos.css"/>
     <link rel="stylesheet" href="css/iconos/iconos.css"/>
     <link rel="canonical" href="https://schooltec.net"/>
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet"/>
@@ -63,20 +63,23 @@
             <nav>
                 <ul class='no-list collection main-nav'>
                     <div class='collection-item no-padding-large user-nav' style='font-size:1.1em;'>
-                        <a class="grey-hover" href="nindex.html">
+                        <a class="grey-hover" href="index.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Inicio</li>
                         </a>
-                        <a class="grey-hover" href="ncursos.html">
+                        <a class="grey-hover" href="cursos.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Cursos</li>
                         </a>
-                        <a href="ntalleres.html">
+                        <a href="talleres.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Talleres</li>
                         </a>
-                        <a href="nblog.html">
+                        <a href="blog.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Blog</li>
                         </a>
-                        <a href="cursobgdqgissesion01.html">
-                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Dia</li>
+                        <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Donate</li>
+                        </a>
+                        <a href="https://schooltec.net/cursobgdqgissesion01">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Día</li>
                         </a>
                     </div>
                 </ul>
@@ -102,12 +105,6 @@
                         <div class=' no-padding text-right col-xs-5 col-sm-9 col-md-8'>
                             <div class='box'>
                                 <ul class='horizontal_nav new-black-text text-lighten-3 relative text-right' style='min-height:1em;'>
-                                    <a class="hidden-xs" href="nindex.html">
-                                        <li class='inline-block'>
-                                            <i class='icon-home'></i>
-                                            <p class='no-margin be-small'>Inicio</p>
-                                        </li>
-                                    </a>
                                     <a class="hidden-xs" href="ncursos.html">
                                         <li class='inline-block'>
                                             <i class='icon-play'></i>
@@ -147,7 +144,7 @@
         <div class='big-padding-top' style='background-color:rgb(53, 54, 58);'> 
             <div class="row center-xs text-left ">
                 <div class=' col-xs-12 col-sm-11 col-md-10 col-lg-9'>    
-                    <video controls="" autoplay="" name="media"><source src="vdo/adiccionalsmartphone.mp4" type="video/mp4"></video>
+                    <div style="position:relative; overflow:hidden; padding-bottom:56.25%"> <iframe src="https://cdn.jwplayer.com/players/RYIV6iJy-3rOwtw94.html" width="100%" height="100%" frameborder="0" scrolling="auto" title="Curso QGIS - Sesión 01" style="position:absolute;" allowfullscreen></iframe> </div>
                 </div>
             </div>
             <div class="row center-xs ">
@@ -348,9 +345,9 @@
                                     <div class='box'>
                                         <p class='uppercase green-flat-text'>Contenido</p>
                                         <ul>
-                                            <li><a href="ncursos.html">Cursos</a></li>
-                                            <li><a href="ntalleres.html">Talleres</a></li>
-                                            <li><a href="nblog.html">blog</a></li>
+                                            <li><a href="cursos.html">Cursos</a></li>
+                                            <li><a href="talleres.html">Talleres</a></li>
+                                            <li><a href="blog.html">blog</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -358,9 +355,9 @@
                                     <div class='box'>
                                         <p class='uppercase green-flat-text'>Cursos</p>
                                         <ul>
-                                            <li><a href="nprogramacion.html">Programación</a></li>
-                                            <li><a href="nofimatica.html">Ofimática</a></li>
-                                            <li><a href="nsoftware.html">Software</a></li>
+                                            <li><a href="programacion.html">Programación</a></li>
+                                            <li><a href="ofimatica.html">Ofimática</a></li>
+                                            <li><a href="software.html">Software</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -368,9 +365,9 @@
                                     <div class='box'>
                                         <p class='uppercase green-flat-text'>Nosotros</p>
                                         <ul>
-                                            <li><a href="nequipo.html">Equipo</a></li>
+                                            <li><a href="equipo.html">Equipo</a></li>
                                             <li><a target="_blank" href="https://m.me/schooltec">Contacto</a></li>
-                                            <li><a href="ninfo.html">Información</a></li>
+                                            <li><a href="info.html">Información</a></li>
                                         </ul>
                                     </div>
                                 </div>
