--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
     <!--###########################-->
     <!--Fuentes, estylos, javascript y favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
-    <link rel="stylesheet" media="all" href="css/nstylos.css"/>
+    <link rel="stylesheet" media="all" href="css/stylos.css"/>
     <link rel="stylesheet" href="css/iconos/iconos.css"/>
     <link rel="canonical" href="https://schooltec.net"/>
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet"/>
@@ -53,20 +53,20 @@
             <nav>
                 <ul class='no-list collection main-nav'>
                     <div class='collection-item no-padding-large user-nav' style='font-size:1.1em;'>
-                        <a class="grey-hover" href="nindex.html">
+                        <a class="grey-hover" href="index.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Inicio</li>
                         </a>
-                        <a class="grey-hover" href="ncursos.html">
+                        <a class="grey-hover" href="cursos.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Cursos</li>
                         </a>
-                        <a href="ntalleres.html">
+                        <a href="talleres.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Talleres</li>
                         </a>
-                        <a href="nblog.html">
-                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Blog</li>
+                        <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Donate</li>
                         </a>
-                        <a href="blog.html">
-                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Dia</li>
+                        <a href="https://schooltec.net/blog">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Día</li>
                         </a>
                     </div>
                 </ul>
@@ -85,42 +85,42 @@
                         <div class='col-xs-2 hidden-bg'></div>
                         <div class='no-padding text-left col-xs-5 col-sm-2 col-md-4'>
                             <div class='box'>
-                                <a href="nindex.html"><img height="45" src="img/favicon.png" alt="Logotipo" /></a>
+                                <a href="index.html"><img height="45" src="img/favicon.png" alt="Logotipo" /></a>
                             </div>
                         </div>
                         <div class=' no-padding text-right col-xs-5 col-sm-9 col-md-8'>
                             <div class='box'>
                                 <ul class='horizontal_nav new-black-text text-lighten-3 relative text-right' style='min-height:1em;'>
-                                    <a class="hidden-xs" href="nindex.html">
-                                        <li class='inline-block'>
-                                            <i class='icon-home'></i>
-                                            <p class='no-margin be-small'>Inicio</p>
-                                        </li>
-                                    </a>
-                                    <a class="hidden-xs" href="ncursos.html">
+                                    <a class="hidden-xs" href="cursos.html">
                                         <li class='inline-block'>
                                             <i class='icon-play'></i>
                                             <p class='no-margin be-small'>Cursos</p>
                                         </li>
                                     </a>
-                                    <a class="hidden-xs" href="ntalleres.html">
+                                    <a class="hidden-xs" href="talleres.html">
                                         <li class='inline-block'>
                                             <i class='icon-file-text'></i>
                                             <p class='no-margin be-small'>Talleres</p>
                                         </li>
                                     </a>
-                                    <a class="hidden-xs" href="nblog.html">
+                                    <a class="hidden-xs" href="blog.html">
                                         <li class='inline-block'>
                                             <i class="icon-book"></i>
                                             <p class='no-margin be-small'>Blog</p>
                                         </li>
                                     </a>  
-                                    <a class="open-searcher hidden-xs" href="blog.html">
+                                    <a class="hidden-xs" target="_blank"href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
                                         <li class='inline-block'>
-                                            <i class='icon-circle-left'></i>
-                                            <p class='no-margin be-small'>Dia</p>
+                                            <i class="icon-gift"></i>
+                                            <p class='no-margin be-small'>Donate</p>
                                         </li>
-                                    </a> 
+                                    </a>
+                                    <a class="hidden-xs" href="https://schooltec.net/blog">
+                                        <li class='inline-block'>
+                                            <i class="icon-contrast"></i>
+                                            <p class='no-margin be-small'>Día</p>
+                                        </li>
+                                    </a>
                                 </ul>
                             </div>
                         </div>
@@ -143,7 +143,7 @@
                                             <div class='row center-xs'>
                                                 <article class='card col-course course no-padding premium relative text-left' data-category-ids=''>
                                                     <div class='box'>
-                                                        <a href="nblogappsgratuitasparaaprender.html">
+                                                        <a href="blogappsgratuitasparaaprender.html">
                                                             <header class='large-padding text-center relative' style='background-color:#068CF6'>
                                                                 <div class='absolute' style='top:15px;right:15px;z-index:10;'>
                                                                     <img height="20" src="img/apps.png" alt=" " />
@@ -154,7 +154,7 @@
                                                     </div>
                                                     <div class='white large-padding body'>
                                                         <h2 class='black-text no-margin normal-line-height'>
-                                                            <a href="nblogappsgratuitasparaaprender.html">Apps gratuitas para aprender</a>
+                                                            <a href="blogappsgratuitasparaaprender.html">Apps gratuitas para aprender</a>
                                                         </h2>
                                                         <div class='row bottom-xs'>
                                                             <div class=' col-xs-6'>
@@ -166,7 +166,7 @@
                                                             <div class='text-right col-xs-6' style='font-size:0.8em;'>
                                                                 <div class='box'>
                                                                     <div id='add-course-75'>
-                                                                        <a class="waves-effect waves-teal btn-flat green-flat-text no-padding no-margin" style="font-size:1.2em;line-height:51px;" data-type="script" href="nblogappsgratuitasparaaprender.html">Leer</a>
+                                                                        <a class="waves-effect waves-teal btn-flat green-flat-text no-padding no-margin" style="font-size:1.2em;line-height:51px;" data-type="script" href="blogappsgratuitasparaaprender.html">Leer</a>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -197,9 +197,9 @@
                                     <div class='box'>
                                         <p class='uppercase green-flat-text'>Contenido</p>
                                         <ul>
-                                            <li><a href="ncursos.html">Cursos</a></li>
-                                            <li><a href="ntalleres.html">Talleres</a></li>
-                                            <li><a href="nblog.html">blog</a></li>
+                                            <li><a href="cursos.html">Cursos</a></li>
+                                            <li><a href="talleres.html">Talleres</a></li>
+                                            <li><a href="blog.html">blog</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -207,9 +207,9 @@
                                     <div class='box'>
                                         <p class='uppercase green-flat-text'>Cursos</p>
                                         <ul>
-                                            <li><a href="nprogramacion.html">Programación</a></li>
-                                            <li><a href="nofimatica.html">Ofimática</a></li>
-                                            <li><a href="nsoftware.html">Software</a></li>
+                                            <li><a href="programacion.html">Programación</a></li>
+                                            <li><a href="ofimatica.html">Ofimática</a></li>
+                                            <li><a href="software.html">Software</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -217,9 +217,9 @@
                                     <div class='box'>
                                         <p class='uppercase green-flat-text'>Nosotros</p>
                                         <ul>
-                                            <li><a href="nequipo.html">Equipo</a></li>
+                                            <li><a href="equipo.html">Equipo</a></li>
                                             <li><a target="_blank" href="https://m.me/schooltec">Contacto</a></li>
-                                            <li><a href="ninfo.html">Información</a></li>
+                                            <li><a href="info.html">Información</a></li>
                                         </ul>
                                     </div>
                                 </div>
