--- a/blogappsgratuitasparaaprender.html
+++ b/blogappsgratuitasparaaprender.html
@@ -31,7 +31,7 @@
     <!--###########################-->
     <!--Fuentes, estylos, javascript y favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
-    <link rel="stylesheet" media="all" href="css/nstylos.css"/>
+    <link rel="stylesheet" media="all" href="css/stylos.css"/>
     <link rel="stylesheet" href="css/iconos/iconos.css"/>
     <link rel="canonical" href="https://schooltec.net"/>
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet"/>
@@ -66,20 +66,23 @@
             <nav>
                 <ul class='no-list collection main-nav'>
                     <div class='collection-item no-padding-large user-nav' style='font-size:1.1em;'>
-                        <a class="grey-hover" href="nindex.html">
+                        <a class="grey-hover" href="index.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Inicio</li>
                         </a>
-                        <a class="grey-hover" href="ncursos.html">
+                        <a class="grey-hover" href="cursos.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Cursos</li>
                         </a>
-                        <a href="ntalleres.html">
+                        <a href="talleres.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Talleres</li>
                         </a>
-                        <a href="nblog.html">
+                        <a href="blog.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Blog</li>
                         </a>
-                        <a href="blogappsgratuitasparaaprender.html">
-                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Dia</li>
+                        <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Donate</li>
+                        </a>
+                        <a href="https://schooltec.net/blogappsgratuitasparaaprender">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Día</li>
                         </a>
                     </div>
                 </ul>
@@ -98,40 +101,40 @@
                         <div class='col-xs-2 hidden-bg'></div>
                         <div class='no-padding text-left col-xs-5 col-sm-2 col-md-4'>
                             <div class='box'>
-                                <a href="nindex.html"><img height="45" src="img/favicon.png" alt="Logotipo" /></a>
+                                <a href="index.html"><img height="45" src="img/favicon.png" alt="Logotipo" /></a>
                             </div>
                         </div>
                         <div class=' no-padding text-right col-xs-5 col-sm-9 col-md-8'>
                             <div class='box'>
                                 <ul class='horizontal_nav new-black-text text-lighten-3 relative text-right' style='min-height:1em;'>
-                                    <a class="hidden-xs" href="nindex.html">
-                                        <li class='inline-block'>
-                                            <i class='icon-home'></i>
-                                            <p class='no-margin be-small'>Inicio</p>
-                                        </li>
-                                    </a>
-                                    <a class="hidden-xs" href="ncursos.html">
+                                    <a class="hidden-xs" href="cursos.html">
                                         <li class='inline-block'>
                                             <i class='icon-play'></i>
                                             <p class='no-margin be-small'>Cursos</p>
                                         </li>
                                     </a>
-                                    <a class="hidden-xs" href="ntalleres.html">
+                                    <a class="hidden-xs" href="talleres.html">
                                         <li class='inline-block'>
                                             <i class='icon-file-text'></i>
                                             <p class='no-margin be-small'>Talleres</p>
                                         </li>
                                     </a>
-                                    <a class="hidden-xs" href="nblog.html">
+                                    <a class="hidden-xs" href="blog.html">
                                         <li class='inline-block'>
                                             <i class="icon-book"></i>
                                             <p class='no-margin be-small'>Blog</p>
                                         </li>
                                     </a>      
-                                    <a class="open-searcher hidden-xs" href="blogappsgratuitasparaaprender.html">
+                                    <a class="hidden-xs" target="_blank"href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
                                         <li class='inline-block'>
-                                            <i class='icon-circle-left'></i>
-                                            <p class='no-margin be-small'>Dia</p>
+                                            <i class="icon-gift"></i>
+                                            <p class='no-margin be-small'>Donate</p>
+                                        </li>
+                                    </a>
+                                    <a class="hidden-xs" href="https://schooltec.net/blogappsgratuitasparaaprender">
+                                        <li class='inline-block'>
+                                            <i class="icon-contrast"></i>
+                                            <p class='no-margin be-small'>Día</p>
                                         </li>
                                     </a>
                                 </ul>
@@ -237,9 +240,9 @@
                                 <div class='box'>
                                     <p class='uppercase green-flat-text'>Contenido</p>
                                     <ul>
-                                        <li><a href="ncursos.html">Cursos</a></li>
-                                        <li><a href="ntalleres.html">Talleres</a></li>
-                                        <li><a href="nblog.html">Blog</a></li>
+                                        <li><a href="cursos.html">Cursos</a></li>
+                                        <li><a href="talleres.html">Talleres</a></li>
+                                        <li><a href="blog.html">Blog</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -247,9 +250,9 @@
                                 <div class='box'>
                                     <p class='uppercase green-flat-text'>Cursos</p>
                                     <ul>
-                                        <li><a href="nprogramacion.html">Web</a></li>
-                                        <li><a href="nofimatica.html">Ofimatica</a></li>
-                                        <li><a href="nsoftware.html">Software</a></li>
+                                        <li><a href="programacion.html">Web</a></li>
+                                        <li><a href="ofimatica.html">Ofimatica</a></li>
+                                        <li><a href="software.html">Software</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -257,9 +260,9 @@
                                 <div class='box'>
                                     <p class='uppercase green-flat-text'>Nosotros</p>
                                     <ul>
-                                        <li><a href="nequipo.html">Equipo</a></li>
+                                        <li><a href="equipo.html">Equipo</a></li>
                                         <li><a Información>Contacto</a></li>
-                                        <li><a href="ninfo.html">Información</a></li>
+                                        <li><a href="info.html">Información</a></li>
                                     </ul>
                                 </div>
                             </div>
