--- a/equipo.html
+++ b/equipo.html
@@ -31,7 +31,7 @@
     <!--###########################-->
     <!--Fuentes, estylos, javascript y favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
-    <link rel="stylesheet" media="all" href="css/nstylos.css"/>
+    <link rel="stylesheet" media="all" href="css/stylos.css"/>
     <link rel="stylesheet" href="css/iconos/iconos.css"/>
     <link rel="canonical" href="https://schooltec.net"/>
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet"/>
@@ -65,8 +65,11 @@
                         <a href="blog.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Blog</li>
                         </a>
+                        <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Donate</li>
+                        </a>
                         <a href="https://schooltec.net/equipo">
-                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Dia</li>
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Día</li>
                         </a>
                     </div>
                 </ul>
@@ -91,12 +94,7 @@
                         <div class=' no-padding text-right col-xs-5 col-sm-9 col-md-8'>
                             <div class='box'>
                                 <ul class='horizontal_nav new-black-text text-lighten-3 relative text-right' style='min-height:1em;'>
-                                    <a class="hidden-xs" href="index.html">
-                                        <li class='inline-block'>
-                                            <i class='icon-home'></i>
-                                            <p class='no-margin be-small'>Inicio</p>
-                                        </li>
-                                    </a>
+                             
                                     <a class="hidden-xs" href="cursos.html">
                                         <li class='inline-block'>
                                             <i class='icon-play'></i>
@@ -115,12 +113,18 @@
                                             <p class='no-margin be-small'>Blog</p>
                                         </li>
                                     </a>  
-                                    <a class="open-searcher hidden-xs" href="https://schooltec.net/equipo">
+                                    <a class="hidden-xs" target="_blank"href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
                                         <li class='inline-block'>
-                                            <i class='icon-circle-left'></i>
-                                            <p class='no-margin be-small'>Dia</p>
+                                            <i class="icon-gift"></i>
+                                            <p class='no-margin be-small'>Donate</p>
                                         </li>
-                                    </a> 
+                                    </a>
+                                    <a class="hidden-xs" href="https://schooltec.net/equipo">
+                                        <li class='inline-block'>
+                                            <i class="icon-contrast"></i>
+                                            <p class='no-margin be-small'>Día</p>
+                                        </li>
+                                    </a>
                                 </ul>
                             </div>
                         </div>
