--- a/cursobgdqgis.html
+++ b/cursobgdqgis.html
@@ -55,7 +55,7 @@
                         <a class="grey-hover" href="index.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Inicio</li>
                         </a>
-                        <a class="grey-hover" href="ncursos.html">
+                        <a class="grey-hover" href="cursos.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Cursos</li>
                         </a>
                         <a href="talleres.html">
