--- a/cursos.html
+++ b/cursos.html
@@ -30,7 +30,7 @@
     <!--###########################-->
     <!--Fuentes, estylos, javascript y favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
-    <link rel="stylesheet" media="all" href="css/nstylos.css"/>
+    <link rel="stylesheet" media="all" href="css/stylos.css"/>
     <link rel="stylesheet" href="css/iconos/iconos.css"/>
     <link rel="canonical" href="https://schooltec.net"/>
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="tylesheet"/>
