--- a/blog.html
+++ b/blog.html
@@ -62,6 +62,9 @@
                         <a href="talleres.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Talleres</li>
                         </a>
+                        <a href="blog.html">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Blog</li>
+                        </a>
                         <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Donate</li>
                         </a>
