--- a/cursobgdqgissesion01.html
+++ b/cursobgdqgissesion01.html
@@ -98,26 +98,26 @@
                         <div class='col-xs-2 hidden-bg'></div>
                         <div class='no-padding text-left col-xs-5 col-sm-2 col-md-4'>
                             <div class='box'>
-                                <a href="nindex.html"><img height="45" src="img/favicon.png" alt="Logotipo" />
+                                <a href="index.html"><img height="45" src="img/favicon.png" alt="Logotipo" />
                                 </a>
                             </div>
                         </div>
                         <div class=' no-padding text-right col-xs-5 col-sm-9 col-md-8'>
                             <div class='box'>
                                 <ul class='horizontal_nav new-black-text text-lighten-3 relative text-right' style='min-height:1em;'>
-                                    <a class="hidden-xs" href="ncursos.html">
+                                    <a class="hidden-xs" href="cursos.html">
                                         <li class='inline-block'>
                                             <i class='icon-play'></i>
                                             <p class='no-margin be-small'>Cursos</p>
                                         </li>
                                     </a>
-                                    <a class="hidden-xs" href="ntalleres.html">
+                                    <a class="hidden-xs" href="talleres.html">
                                         <li class='inline-block'>
                                             <i class='icon-file-text'></i>
                                             <p class='no-margin be-small'>Talleres</p>
                                         </li>
                                     </a>
-                                    <a class="hidden-xs" href="nblog.html">
+                                    <a class="hidden-xs" href="blog.html">
                                         <li class='inline-block'>
                                             <i class="icon-book"></i>
                                             <p class='no-margin be-small'>Blog</p>
