--- a/cursobgdqgissesion01.html
+++ b/cursobgdqgissesion01.html
@@ -122,7 +122,13 @@
                                             <i class="icon-book"></i>
                                             <p class='no-margin be-small'>Blog</p>
                                         </li>
-                                    </a>  
+                                    </a> 
+                                    <a class="hidden-xs" target="_blank"href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
+                                        <li class='inline-block'>
+                                            <i class="icon-gift"></i>
+                                            <p class='no-margin be-small'>Donate</p>
+                                        </li>
+                                    </a> 
                                     <a class="open-searcher hidden-xs" href="cursobgdqgissesion01.html">
                                         <li class='inline-block'>
                                             <i class='icon-circle-left'></i>
