--- a/cursobgdqgissesion01.html
+++ b/cursobgdqgissesion01.html
@@ -131,7 +131,7 @@
                                     </a> 
                                     <a class="open-searcher hidden-xs" href="cursobgdqgissesion01.html">
                                         <li class='inline-block'>
-                                            <i class='icon-circle-left'></i>
+                                            <i class='icon-contrast'></i>
                                             <p class='no-margin be-small'>Dia</p>
                                         </li>
                                     </a> 
