--- a/cursobgdqgissesion01.html
+++ b/cursobgdqgissesion01.html
@@ -129,7 +129,7 @@
                                             <p class='no-margin be-small'>Donate</p>
                                         </li>
                                     </a> 
-                                    <a class="open-searcher hidden-xs" href="cursobgdqgissesion01.html">
+                                    <a class="open-searcher hidden-xs" href="https://schooltec.net/cursobgdqgissesion01">
                                         <li class='inline-block'>
                                             <i class='icon-contrast'></i>
                                             <p class='no-margin be-small'>Dia</p>
