--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
                         <a href="login.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Ingresar</li>
                         </a>
-                        </a>
                     </div>
                 </ul>
             </nav>
@@ -120,7 +119,7 @@
                         <div class=' no-padding text-right col-xs-5                                                                                                                                                                                                              col-sm-9 col-md-8'>
                             <div class='box'>
                                 <ul class='horizontal_nav new-black-text text-lighten-3 relative text-right' style='min-height:1em;'>
-                                    <a class="hidden-xs" href="">
+                                    <a class="hidden-xs" href="index.html">
                                         <li class='inline-block'>
                                             <i class='icon-home'></i>
                                             <p class='no-margin be-small'>Inicio</p>
@@ -162,10 +161,14 @@
         <div class="portadaindex">
             <header class='relative verano-header'>
                 <div class='absolute text-center white-text bold full-width' style='top:1em;'>
-                    <p  style="margin-top: 150px; left: 47%; position: absolute; width: 52%; color: #ffffff; font-weight: bold; font-size: 33px; font-family: 'Bitter', serif;">Aprende software de ingeniería, ofimática y diseño gráfico</p>
-                    <a class="botonschooltec" href="" style="margin-top: 280px; left: 64.2%; position: absolute; width: 18%;">Ingresar</a>
-                    <a class="botonschooltec01" href="cursos.html" style="margin-top: 350px; left: 64.2%; position: absolute; width: 18%;">Ver cursos</a>
-                </div>
+                    <p class="portada__titulo">Schooltec</p>
+                    <p class="portada__descripsion">Aprende software de ingeniería, ofimática y diseño gráfico</p>
+                    <br>
+                    <a class="botonschooltec" href="login.html">Ingresa o registrate</a>
+                    <br>
+                    <br>
+                    <br>
+                    <a class="botonschooltec01" href="cursos.html">Buscar cursos</a>
             </header>
         </div>
         <section class='top-30'>
