--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <p class="portada__titulo">Schooltec</p>
                     <p class="portada__descripsion">Aprende software de ingeniería, ofimática y diseño gráfico</p>
                     <br>
-                    <a class="botonschooltec" href="login.html">Ingresa o registrate</a>
+                    <a class="botonschooltec02" href="login.html">Ingresa o registrate</a>
                     <br>
                     <br>
                     <br>
