--- a/cursowordsesion01.html
+++ b/cursowordsesion01.html
@@ -146,7 +146,7 @@
         <input id='current_time' type='hidden' />
         <input type="hidden" name="id" id="id" value="as2ehtCT4sE" />
         <div id='lean-overlay-player' style='opacity: 0.75;'></div>
-        <div class='big-padding-top' style='background-color:#235390'>  
+        <div class='big-padding-top' style='background-image: linear-gradient(-45deg, #04befe 0%,  #235390 100%);'>  
             <div class="row center-xs text-left ">
                 <div class=' col-xs-12 col-sm-11 col-md-10 col-lg-9'>  
                     <div style="position:relative; overflow:hidden; padding-bottom:56.25%"> <iframe src="https://www.youtube.com/embed/a0cWZYKSLGQ?start=10" width="100%" height="100%" frameborder="0" scrolling="auto" title="Curso QGIS - Sesión 01" style="position:absolute;" allowfullscreen></iframe> </div>
