--- a/cursobgdqgissesion01.html
+++ b/cursobgdqgissesion01.html
@@ -143,11 +143,11 @@
             </div>
         </div>
     </nav>
-    <section id="body" style="background-color: #000000;">
+    <section id="body" style="background-color: #3b4453;">
         <input id='current_time' type='hidden' />
         <input type="hidden" name="id" id="id" value="as2ehtCT4sE" />
         <div id='lean-overlay-player' style='opacity: 0.75;'></div>
-        <div class='big-padding-top' style='background-color:rgb(53, 54, 58);'> 
+        <div class='big-padding-top' style='background-color:#3b4453;'> 
             <div class="row center-xs text-left ">
                 <div class=' col-xs-12 col-sm-11 col-md-10 col-lg-9'>    
                     <div style="position:relative; overflow:hidden; padding-bottom:56.25%"> <iframe src="https://cdn.jwplayer.com/players/RYIV6iJy-3rOwtw94.html" width="100%" height="100%" frameborder="0" scrolling="auto" title="Curso QGIS - Sesión 01" style="position:absolute;" allowfullscreen></iframe> </div>
@@ -165,17 +165,17 @@
             </div>
         </div>
         <div class='white'>
-            <div class="row center-xs " style="background-color: rgb(77, 77, 82);">
+            <div class="row center-xs " style="background-color: #4e5a6e;">
                 <div class=' main-container col-xs-12 col-sm-11 col-md-10' stlye=''>
                     <div class='box'>
                         <div class='hidden-x'>
                             <div class='infinite-width no-scroll'>
                                 <div class='large-padding' id='about_course' style='min-height:400px; '>
                                     <article class='card text-left'>
-                                        <header class='border-bottom large-padding' style='border-color:rgb(53, 54, 58); background-color: rgba(32,33,36,1);'>
+                                        <header class='border-bottom large-padding' style='border-color:#3b4453; background-color: #222933;'>
                                             <p class='upercase bold grey-text text-darken-2 no-margin be-medium normal-line-height' style="color: #ffffff;">Sesiones</p>
                                         </header>
-                                        <section class='large-padding' style="background-color: rgb(53, 54, 58);">
+                                        <section class='large-padding' style="background-color: #3b4453;">
                                             <ul class='large-padding no-margin'>
                                                 <li class='top-space'>
                                                     <a href="cursobgdqgis.html">
@@ -321,10 +321,10 @@
                                         </section>
                                     </article>
                                     <article class='card text-left top-space'>
-                                        <header class='border-bottom large-padding' style='border-color:rgb(53, 54, 58); background-color: rgba(32,33,36,1);'>
+                                        <header class='border-bottom large-padding' style='border-color:#3b4453; background-color: #222933;'>
                                             <p class='upercase bold grey-text text-darken-2 no-margin be-medium normal-line-height' style="color:#ffffff;">Notas del tutor</p>
                                         </header>
-                                        <section class='large-padding' style="background-color: rgb(53, 54, 58);">
+                                        <section class='large-padding' style="background-color: #3b4453;">
                                             <div class='paragraph' style="color: #E9E9E9;">Ninguna</div>
                                         </section>
                                     </article>
