--- a/cursobasicoword.html
+++ b/cursobasicoword.html
@@ -139,15 +139,13 @@
                         <div class='row middle-xs center-xs text-left top-space'>
                             
                             <div class=' col-xs-12 col-sm-6 col-md-8 col-lg-7'> 
-                                <div style="position:relative; overflow:hidden; padding-bottom:56.25%"> <iframe src="https://cdn.jwplayer.com/players/wa978nGm-3rOwtw94.html" width="100%" height="100%" frameborder="0" scrolling="auto" title="Curso QGIS" style="position:absolute;" allowfullscreen></iframe> </div> 
+                                <script src="https://fast.wistia.com/embed/medias/q2lkhuk73n.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_q2lkhuk73n videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/q2lkhuk73n/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
                             </div>         
 
                             <article class='card col-course course no-padding premium relative text-left' data-category-ids=''> 
                                 <div class='box'>
-                                    <a href="cursobgdqgissesion01.html">
-                                        <header class='large-padding text-center relative' style='background-color:rgb(96, 96, 99);'>
-                                            <img style="height:100px;z-index:10" class="relative avatar" src="img/equipo1.png" alt="" />
-                                        </header>
+                                    <a href="cursobasicoword.html">
+                                        <img class="imagendecursos" src="img/postcursoword.png" alt="">
                                     </a>
                                 </div>
                                 <div class='white large-padding body'>
