--- a/cursos.html
+++ b/cursos.html
@@ -48,7 +48,7 @@
         </script>
         <!--#################################################-->
     </head>
-<body style="background: rgb(77, 77, 82);">
+<body style="background: #4e5a6e;">
     <div id="user-data" class="absolute z-depth-2 white" data-open="false" data-turbolinks-permanent>
         <div>
             <nav>
