--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <header class='relative verano-header'>
                 <div class='absolute text-center white-text bold full-width' style='top:1em;'>
                     <p class="portada__titulo">Schooltec</p>
-                    <p class="portada__descripsion">Escuela online de formacion en manejo de software</p>
+                    <p class="portada__descripsion">Escuela online de formacion profrsional en manejo de software</p>
                     <br>
                     <a class="botonschooltec02" href="">Ingresa o registrate</a>
                     <br>
