--- a/cursobasicoword.html
+++ b/cursobasicoword.html
@@ -143,7 +143,7 @@
                             </div>         
 
                             <article class='card col-course course no-padding premium relative text-left' data-category-ids=''> 
-                                <div class='box'>
+                                <div class='box' style="background: #3b4453;">
                                     <a href="cursobasicoword.html">
                                         <img class="imagendecursos" src="img/postcursoword.png" alt="">
                                     </a>
