--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
                         <a href="blog.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Blog</li>
                         </a>
-                        <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
-                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Donate</li>
+                        <a href="login.php">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Ingresar</li>
+                        </a>
+                        <a href="suscripcion.html">
+                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Suscribete</li>
                         </a>
                     </div>
                 </ul>
@@ -108,10 +111,16 @@
                                             <p class='no-margin be-small'>Blog</p>
                                         </li>
                                     </a> 
-                                    <a class="hidden-xs" target="_blank"href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
+                                    <a class="hidden-xs" href="">
                                         <li class='inline-block'>
-                                            <i class="icon-gift"></i>
-                                            <p class='no-margin be-small'>Donate</p>
+                                            <i class="icon-user-plus"></i>
+                                            <p class='no-margin be-small'>Ingresar</p>
+                                        </li>
+                                    </a>
+                                    <a class="hidden-xs" href="suscripcion.html">
+                                        <li class='inline-block'>
+                                            <i class="icon-credit-card"></i>
+                                            <p class='no-margin be-small'>Suscribete</p>
                                         </li>
                                     </a>
                                 </ul>
@@ -127,13 +136,13 @@
             <header class='relative verano-header'>
                 <div class='absolute text-center white-text bold full-width' style='top:1em;'>
                     <p class="portada__titulo">Schooltec</p>
-                    <p class="portada__descripsion">Escuela online de formacion profrsional en manejo de software</p>
+                    <p class="portada__descripsion">Escuela online de formación profesional en manejo de software</p>
                     <br>
                     <a class="botonschooltec02" href="">Ingresa o registrate</a>
                     <br>
                     <br>
                     <br>
-                    <a class="botonschooltec01" href="cursos.html">Donar</a>
+                    <a class="botonschooltec01" href="cursos.html">Buscar cursos</a>
             </header>
         </div>
         <section class='top-30'>
@@ -293,7 +302,7 @@
                                     <div class='top-30'>
                                         <div class='row center-xs'>
                                             <article class='card col-course course no-padding premium relative text-left' data-category-ids=''>
-                                                <div class='box'>
+                                                <div class='box' style="background: #3b4453;">
                                                     <a href="cursobasicoexcel.html">
                                                         <img class="imagendecursos" src="img/postcursoexcel.png" alt="">
                                                     </a>
@@ -320,7 +329,7 @@
                                                 </div>
                                             </article>
                                             <article class='card col-course course no-padding premium relative text-left' data-category-ids=''>
-                                                <div class='box'>
+                                                <div class='box'style="background: #3b4453;">
                                                     <a href="cursobasicoautocad.html">
                                                         <img class="imagendecursos" src="img/postcursoautocad.png" alt="">
                                                     </a>
@@ -347,7 +356,7 @@
                                                 </div>
                                             </article>
                                             <article class='card col-course course no-padding premium relative text-left' data-category-ids=''>
-                                                <div class='box'>
+                                                <div class='box' style="background: #3b4453;">
                                                     <a href="cursobasicoword.html">
                                                         <img class="imagendecursos" src="img/postcursoword.png" alt="">
                                                     </a>
